# sli-robot

./: README.md
install/: local_setup.sh  setup.sh
install/dynamixel_keyboard_controller/lib/dynamixel_keyboard_controller/: dynamixel_keyboard_controller
install/dynamixel_keyboard_controller/share/dynamixel_keyboard_controller/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/dynamixel_mpu9250/lib/dynamixel_mpu9250/: dynamixel_controller
install/dynamixel_mpu9250/share/dynamixel_mpu9250/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/dynamixel_sdk/share/dynamixel_sdk/: package.sh
install/dynamixel_sdk_custom_interfaces/share/dynamixel_sdk_custom_interfaces/: local_setup.sh  package.sh
install/dynamixel_sdk_examples/lib/dynamixel_sdk_examples/: read_write_node
install/dynamixel_sdk_examples/share/dynamixel_sdk_examples/: local_setup.sh  package.sh
install/locomotion/lib/locomotion/: locomotion_node
install/locomotion/share/locomotion/: package.sh
install/locomotion_wire/lib/locomotion_wire/: locomotion_wire  locomotion_wire_node
install/locomotion_wire/share/locomotion_wire/: package.bash  (+4 more)
log/: latest_build
src/camera/: client.py  human4.py  ros2_main.py  ros2_main2.py  ros2_raspi.py
src/dynamixel_keyboard_controller/: package.xml  setup.cfg  setup.py
src/dynamixel_mpu9250/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/locomotion/: package.xml  setup.py
src/locomotion_wire/: package.xml  setup.cfg  setup.py
src/locomotion_wire/locomotion_wire/: locomotion_wire (copy).py
(+1 files in other folders)
